--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 	padding: 0;
 	margin: 0;
 }
+
 html, body {
 	height: 100%;
 	-webkit-font-smoothing: antialiased;
@@ -31,6 +32,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 .topo h2{
 	font-variant: small-caps;
+	display: block;
+	background: rgb(35, 60, 104);
+	color: white;
+	padding: 7px 33px 8px 43px;
+	margin-left: -32px;
+	border-top-right-radius: 30px;
+	border-bottom-right-radius: 30px;
+
 }
 
 .agenda a {
@@ -92,13 +101,21 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 #filtros li {
 	border: 0px;
+	text-align: center;
+	border-radius: 50%;
+	border: solid 1px;
+	border-color: white;
 }
 
 #calendario ul, #filtros ul {
 	margin: 0px;
 	list-style: none;
 }
-
+#calendario li {
+	border-radius: 50%;
+	border: solid 2px white;
+/*	border-color: white;*/
+}
 .dataslider {
 	border: 0;
 }
@@ -131,9 +148,7 @@ ul {
 	padding: 0;
 }
 
-#calendario li {
-	border: 0px;
-}
+
 
 .article ul {
 	list-style: circle;
@@ -223,11 +238,10 @@ ul {
 		font-family: "flaticon";
 		font-size: 30px;
 		text-align: center;
-		border-radius: 50%;
+		/*border-radius: 50%;*/
 		width: 40px;
 		height: 40px;
-		border: solid 1px;
-		
+		border: solid 1px;		
 		border-color: white;
 		padding-left: 5px;
 	}
@@ -478,6 +492,10 @@ ul {
 		width: 100%;
 		padding-top: 24px;
 	}
+	#materia{
+		clear: both;
+		float: left;
+	}
 }
 /*======================================pequeno-------------------------------*/
 
@@ -620,9 +638,9 @@ ul {
 		text-align: center;
 	}
 	.site-title {
-		font-size: 32px,
-		/*line-height : 40px;*/
-		}
+		font-size: 32px;
+		/* line-height : 40px;*/
+	}
 		#site-navigation {
 		font-size: 20px;
 		line-height: 38px;
@@ -1082,15 +1100,15 @@ li #legenda ,#legenda{
 	}
 
 	.topo {
+		width: 100%;/*
 		border-bottom: solid 1px;
-		width: 100%;
-		margin-bottom: 1em;
+		margin-bottom: 1em;*/
 	}
 
 	#calendario {
 		float: right;
 		margin-top: 187px;
-		margin-right: 40px;
+		margin-right: 20px;
 		width: 90px;
 		margin-bottom: -50px;
 	}
@@ -1145,7 +1163,7 @@ li #legenda ,#legenda{
 		padding: 16px 5px 12px 14px;
 		margin-right: 30px;
 		position: relative;
-				height: 140px;
+		height: 140px;
 		border-top-right-radius: 70px;
 		border-bottom-right-radius: 70px;
 	}
@@ -1372,8 +1390,8 @@ li #legenda ,#legenda{
 		margin-top: 50px;
 	}
 	#proximos {
-		border-bottom: solid 1px;
-		margin-bottom: 15px;
+		/*border-bottom: solid 1px;
+		margin-bottom: 15px;*/
 		padding-bottom: 15px;
 		width: 100%;
 	}
@@ -1484,8 +1502,9 @@ li #legenda ,#legenda{
 
 	#site-info {
 		/*position: relative;*/
-		margin: 30px 0 0;
+		/*margin: 30px 0 0;*/
 		padding: 20px 40px;
+		/*left: 456px;*/
 		/*left: 400px;*/
 	}
 	.single #site-info, .page #site-info {
@@ -1605,9 +1624,9 @@ li #legenda ,#legenda{
 		width: 80px;
 		height: 80px;
 
-		border-radius: 50%;
+		/*border-radius: 50%;
 		border: solid 2px;
-		border-color: white;
+		border-color: white;*/
 	}
 
 	#calendario li a {
@@ -1793,23 +1812,43 @@ li #legenda ,#legenda{
 		float: right;
 		position: absolute;
 		z-index: 190;
-		width: 212px;
-		padding: 10px 3px 10px 14px;
-		right: 20px;
+		padding: 4px 35px 0 29px;
+		right: 0px;
 		margin-top: 46px;
-
-
+		border-top-left-radius: 70px;
+		border-bottom-left-radius: 70px;
 	}
+	.site-title svg:not(:root) {
+		width:200px;
+	}
+
 	.texto-secundario {
 		width: 100%;
 		float: left;
 	}
-	#menu .site-title {
+	/*#menu .site-title {
 		margin-top: 40px;
 		top: 0;
 		left: -20px;
 		font-family: "TheMix";
 		line-height: 40px;
+	}*/
+
+	#menu .site-title {
+		float: right;
+		position: absolute;
+		z-index: 190;
+		padding: 4px 35px 0 29px;
+		top: 0;
+		left: -40px;
+		width:200px;
+		margin-top: 46px;
+		border-radius:0;
+		border-top-right-radius: 70px;
+		border-bottom-right-radius: 70px;
+	}
+	.site-title svg:not(:root) {
+		width:200px;
 	}
 	#menu input {
 		/*width: 75%;*/
