--- a/style.css
+++ b/style.css
@@ -1440,13 +1440,15 @@ li #legenda ,#legenda{
 	 max-width: 400px;
 	 }*/
 	.wp-caption-text {
-		padding: 9px 15px 9px 12px;
+		padding: 9px 15px 9px 24px;
 		position: absolute;
 		bottom: 30px;
 		right: -10px;
 		max-width: 400px;
 		font-size: 0.9em;
 		line-height: 1.44em;
+		border-bottom-left-radius: 29px;
+		border-top-left-radius: 29px;
 	}
 
 	.event-dmes {
@@ -2672,9 +2674,10 @@ input {
 .nav-previous, .nav-next {
 	font-family: "TheMix";
 	font-size: 30px;
-	width: 45px;
-	height: 45px;
+	width: 50px;
+	height: 50px;
 	font-weight: 800 !important;
+	border-radius: 50%;
 }
 
 #nav-below {
@@ -2691,11 +2694,18 @@ input {
 
 .nav-next {
 	float: right;
-	padding: 8px 10px 0 7px;
+	/*padding: 8px 10px 0 7px;*/
 }
 .nav-previous {
 	float: left;
-	padding: 8px 10px 0 7px;
+	/*padding: 8px 10px 0 7px;*/
+}
+#nav-below a {
+	display: block;
+	text-align: center;
+	width: inherit;
+	height: inherit;
+	line-height: 46px;
 }
 
 .plugin li {
