--- a/style.css
+++ b/style.css
@@ -214,9 +214,14 @@ ul {
 		margin-bottom: 62px;
 	}
 	#marca {
-		position: absolute;
+		display: inline-block;
 		bottom: 20px;
-		left: 353px;
+		position: relative;
+		height: 100%;
+		margin-left: 30px;
+		/*position: absolute;
+		bottom: 20px;
+		left: 353px;*/
 	}
 	.clip {
 		height: 530px;
@@ -1016,6 +1021,7 @@ li #legenda ,#legenda{
 }
 #site-info a {
 	text-decoration: none;
+	display: inline-block;
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -1505,6 +1511,7 @@ li #legenda ,#legenda{
 		/*position: relative;*/
 		/*margin: 30px 0 0;*/
 		padding: 20px 40px;
+		position: absolute;
 		/*left: 456px;*/
 		/*left: 400px;*/
 	}
@@ -1654,6 +1661,7 @@ li #legenda ,#legenda{
 	/* Ordenar depois */
 	#colophon {
 		width: 992px;
+		margin: 0 auto;
 	}
 	.numero {
 		border: solid 1px;
@@ -1730,7 +1738,11 @@ li #legenda ,#legenda{
 	#marca {
 		position: static;
 	}
+	#marca a {
+		display: block;
+	}
 	#marca img {
+		display: block;
 		margin-top: 20px;
 	}
 	#masthead {
@@ -1768,7 +1780,7 @@ li #legenda ,#legenda{
 		bottom: 0px;
 		left: 20px;
 		width: 50px;
-		overflow: hidden;
+		/*overflow: hidden;*/
 		padding-bottom: 5px;
 	}
 	#menu #calendario {
@@ -1842,7 +1854,7 @@ li #legenda ,#legenda{
 		padding: 4px 35px 0 29px;
 		top: 0;
 		left: -40px;
-		width:200px;
+		width: 250px;
 		margin-top: 46px;
 		border-radius:0;
 		border-top-right-radius: 70px;
@@ -2270,7 +2282,7 @@ li #legenda ,#legenda{
 	#colophon {
 		position: relative;
 		width: 100%;
-		margin: 0;
+		margin: 0 auto;
 		top: 0;
 		display: block;
 	}
@@ -2278,7 +2290,7 @@ li #legenda ,#legenda{
 		border: solid 1px;
 	}
 	li #legenda {
-		right: 20px;
+		right: 40px;
 		position: absolute;
 		bottom: 60px;
 		padding: 12px 16px;
@@ -2844,6 +2856,7 @@ input {
 	#boxmateria h2 {
 		border-bottom: solid 1px ;		
 		padding: 0.5em 0.6em 0.7em;
+		margin: 0 -0.6em;
 	}
 	#boxmateria .topo{
 		padding: 0 10px;
