--- a/style.css
+++ b/style.css
@@ -1191,7 +1191,7 @@ li #legenda ,#legenda{
 		padding: 16px 5px 12px 14px;
 		margin-right: 30px;
 		position: relative;
-		height: 140px;
+		height: 156px;
 		border-top-right-radius: 70px;
 		border-bottom-right-radius: 70px;
 	}
@@ -1287,11 +1287,11 @@ li #legenda ,#legenda{
 		position: absolute;
 		margin: 0;
 		width: 100%;
-		top: 140px;
+		top: 156px;
 		z-index: 100;
 	}
 	.entry-header3 {
-		top: 119px;
+		top: 129px;
 	}
 
 	.entry-header2 {
@@ -1353,7 +1353,7 @@ li #legenda ,#legenda{
 
 	.hentry {
 		width: 257px;
-		height: 241px;
+		height: 257px;
 		margin: 2px;
 		position: relative;
 		float: left;
@@ -1373,7 +1373,7 @@ li #legenda ,#legenda{
 		float: left;
 		overflow: hidden;
 		width: 779px;
-		height: 241px;
+		height: 257px;
 		display: block;
 		cursor: pointer;
 		margin: 2px;
@@ -1387,14 +1387,14 @@ li #legenda ,#legenda{
 		margin: 6px 10px;
 	}
 	.hentry-first .entry-header-up {
-		height: 71px;
+		height: 81px;
 	}
 
 	.entry-header-hoje {
 		position: absolute;
 		margin: 0;
 		width: 100%;
-		top: 165px;
+		top: 181px;
 		z-index: 120;
 		/*height: 90px;*/
 	}
@@ -2513,7 +2513,7 @@ li #legenda ,#legenda{
 
 		.single #menu #calendario, .page #menu #calendario, #menu #calendario {
 			width: 250px;
-			/* margin-top: 71px; */
+			/* margin-top: 81px; */
 			margin-right: 30px;
 			/* top: 0; */
 			/* left: 51px; */
@@ -2722,6 +2722,9 @@ input {
 }
 .busca {
 	padding-bottom: 20px;
+}
+#searchbox h2, .search h2{
+	font-variant: small-caps;
 }
 .categoria {
 	line-height: 20px;
